Fix story context hover effect in dark mode - remove hardcoded white hover background

--- a/app.html
+++ b/app.html
@@ -1372,7 +1372,7 @@
                 if (projectCharacters && projectCharacters.length > 0) {
                     projectCharacters.forEach(character => {
                         const itemElement = document.createElement('div');
-                        itemElement.className = 'p-2 text-sm hover:bg-gray-50 rounded cursor-pointer';
+                        itemElement.className = 'context-item text-sm';
                         
                         itemElement.innerHTML = `
                             <div class="font-medium">${character.name}</div>
