--- a/app.html
+++ b/app.html
@@ -659,7 +659,7 @@
                 left: 0;
                 right: 0;
                 width: 100%;
-                background: white;
+                background: var(--card-background);
                 z-index: 49;
                 padding: 8px;
                 display: flex;
@@ -689,7 +689,7 @@
                 top: 112px; /* Match header + toolbar height */
                 bottom: 0;
                 width: 250px;
-                background: white;
+                background: var(--card-background);
                 z-index: 48;
                 transition: transform 0.3s ease;
                 display: block !important;
@@ -763,7 +763,7 @@
             height: 16px;
             border: 1px solid #d1d5db;
             border-radius: 4px;
-            background-color: white;
+            background-color: var(--card-background);
             cursor: pointer;
             display: inline-flex;
             align-items: center;
@@ -806,6 +806,20 @@
             background-color: var(--hover-background);
             border-left: 3px solid var(--primary);
             transform: translateX(2px);
+        }
+
+        /* When keyboard is visible, ensure input stays visible */
+        .keyboard-visible {
+            position: fixed !important;
+            bottom: 0 !important;
+            left: 0 !important;
+            right: 0 !important;
+            background: var(--card-background) !important;
+            z-index: 100 !important;
+            padding: 10px !important;
+            box-shadow: 0 -2px 10px rgba(0,0,0,0.1) !important;
+            margin-bottom: env(safe-area-inset-bottom, 0) !important;
+            transition: transform 0.3s ease !important;
         }
     </style>
 </head>
@@ -1994,7 +2008,7 @@
     <div id="sidebarOverlay" class="lg:hidden" onclick="toggleSidebar()"></div>
 
     <!-- Load Project Panel -->
-    <div id="loadProjectPanel" class="fixed right-0 top-0 h-screen w-96 bg-white shadow-lg transform translate-x-full transition-transform duration-300 z-50">
+    <div id="loadProjectPanel" class="fixed right-0 top-0 h-screen w-96 bg-card shadow-lg transform translate-x-full transition-transform duration-300 z-50">
         <div class="h-full flex flex-col">
             <div class="p-6 border-b border-gray-100">
                 <div class="flex items-center justify-between mb-4">
@@ -4232,7 +4246,7 @@
                 bottom: 0 !important;
                 left: 0 !important;
                 right: 0 !important;
-                background: white !important;
+                background: var(--card-background) !important;
                 z-index: 100 !important;
                 padding: 10px !important;
                 box-shadow: 0 -2px 10px rgba(0,0,0,0.1) !important;
