Fix JavaScript errors: Remove duplicate initializeApp() calls that were causing ReferenceError

--- a/app.html
+++ b/app.html
@@ -4599,16 +4599,8 @@
         });
     </script>
 
-    <!-- Initialize the app -->
+    <!-- PDF Export Functionality -->
     <script>
-        // Initialize the app
-        initializeApp();
-    </script>
-    
-    <!-- Initialize the app -->
-    <script>
-        // Initialize the app
-        initializeApp();
         
         // PDF Export Functionality
         async function exportToPDF() {
