Fix setupEventListeners scope error: Expose functions to global scope from module script

--- a/app.html
+++ b/app.html
@@ -2121,6 +2121,11 @@
         });
             }
         }
+        
+        // Expose functions to window object for access from other scripts
+        window.setupEventListeners = setupEventListeners;
+        window.loadProjects = loadProjects;
+        window.loadContextItems = loadContextItems;
     </script>
 
     <script type="module">
